fix: Navigation icon on mobile / desktop

--- a/styles/components/_navigation.scss
+++ b/styles/components/_navigation.scss
@@ -120,7 +120,7 @@
                         display: flex;
                         align-items: center;
                         &__icon {
-                            top: 13px
+                            //top: 13px
                         }
                         &__input {
                             width: 100%;
